fixed carousel image distortion

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -160,13 +160,16 @@ h1.float-left {
 
 .carousel-caption {
   font-family: 'Montserrat', sans-serif;
-  font-size: 60px;
+  font-size: 40px;
   font-weight: 100;
   text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
   background-color: rgba(0, 0, 0, 0.5);
+  background-size: auto;
   width: 100%;
+  height: auto;
   position: absolute;
   left: 0;
+  bottom: 5;
 }
 .navbar .navbar-inverse {
   margin-bottom: 0;
